fixed technologies section so when its on mobile its no longer a single line of icons.

--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -2,4 +2,10 @@
 .service-heading {
   margin: 15px 0;
   text-transform: none;
+  font-size: .75rem;
+}
+@media (min-width: 992px) {
+  .technologies {
+    width: 75%;
+  }
 }
